--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -7,9 +7,12 @@
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "expo": "^24.0.0",
+    "expo-pixi": "../../expo-pixi-0.0.0.tgz",
+    "path": "^0.12.7",
+    "pixi.js": "^4.6.2",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
-    "expo-pixi": "../../expo-pixi-0.0.0.tgz"
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
