Updated to use expo-asset-utils

--- a/examples/filter-image/package.json
+++ b/examples/filter-image/package.json
@@ -7,13 +7,15 @@
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "expo": "^24.0.0",
-    "expo-pixi": "../../expo-pixi-0.1.0.tgz",
+    "expo-pixi": "../../expo-pixi-0.1.1.tgz",
     "path": "^0.12.7",
     "pixi-filters": "^2.4.1",
     "pixi.js": "^4.6.2",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "expo-asset-utils": "^0.0.0",
+    "EventEmitter": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
