--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -6,9 +6,12 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "EventEmitter": "^1.0.0",
     "expo": "^24.0.0",
-    "expo-pixi": "../../expo-pixi-0.1.0.tgz",
+    "expo-asset-utils": "^0.0.0",
+    "expo-pixi": "../../expo-pixi-0.1.1.tgz",
     "path": "^0.12.7",
+    "pixi-filters": "^2.4.1",
     "pixi.js": "^4.6.2",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
