--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "path": "^0.12.7",
     "react": "^16.0.0",
     "pixi-filters": "*",
-    "expo-asset-utils": "^0.0.0"
+    "expo-asset-utils": "^0.0.0",
+    "EventEmitter": "^1.0.0"
   },
   "dependencies": {
     "pixi.js": "^4.6.2",
     "url": "^0.11.0",
     "path": "^0.12.7",
-    "pixi-filters": "*",
-
+    "pixi-filters": "*"
   },
   "devDependencies": {
     "expo": "^24.0.0",
