--- a/examples/sketch/package.json
+++ b/examples/sketch/package.json
@@ -7,14 +7,14 @@
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "EventEmitter": "^1.0.0",
-    "expo": "^24.0.0",
-    "expo-asset-utils": "^0.0.0",
-    "expo-pixi": "../../expo-pixi-0.1.2.tgz",
+    "expo": "^25.0.0",
+    "expo-asset-utils": "^0.0.2",
+    "expo-pixi": "../../",
     "path": "^0.12.7",
     "pixi-filters": "^2.5.1",
     "pixi.js": "^4.6.2",
     "react": "16.0.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "url": "^0.11.0"
   },
   "devDependencies": {
