--- a/examples/comprehensive/package.json
+++ b/examples/comprehensive/package.json
@@ -6,17 +6,17 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "EventEmitter": "^1.0.0",
     "expo": "^24.0.0",
-    "expo-pixi": "../../expo-pixi-0.1.1.tgz",
+    "expo-asset-utils": "^0.0.0",
+    "expo-pixi": "../../expo-pixi-v0.2.1.tgz",
     "path": "^0.12.7",
-    "pixi.js": "^4.6.2",
+    "pixi-filters": "*",
+    "pixi.js": "4.7.0",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
     "react-navigation": "^1.0.0-beta.22",
-    "url": "^0.11.0",
-    "pixi-filters": "*",
-    "expo-asset-utils": "^0.0.0",
-    "EventEmitter": "^1.0.0"
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
