--- a/examples/sketch/package.json
+++ b/examples/sketch/package.json
@@ -1,21 +1,16 @@
 {
   "name": "sketch",
-  "version": "0.0.0",
+  "version": "0.2.1",
   "description": "expo-pixi sketch example",
   "author": "support@expo.io",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "EventEmitter": "^1.0.0",
     "expo": "^25.0.0",
     "expo-asset-utils": "^0.0.2",
-    "expo-pixi": "../../",
-    "path": "^0.12.7",
-    "pixi-filters": "^2.5.1",
-    "pixi.js": "^4.6.2",
-    "react": "16.0.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
-    "url": "^0.11.0"
+    "expo-pixi": "../../expo-pixi-v0.2.1.tgz",
+    "react": "16.2.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
