--- a/examples/comprehensive/app.json
+++ b/examples/comprehensive/app.json
@@ -13,7 +13,7 @@
       "hideExponentText": false
     },
     "packagerOpts": {
-      "assetExts": ["ttf", "mp4", "otf", "xml", "json", "atlas", "frag", "xml"]
+      "assetExts": ["ttf", "mp4", "otf", "xml", "atlas", "frag", "xml"]
     },
     "ios": {
       "supportsTablet": true
