refresh sketch example

--- a/examples/sketch/package.json
+++ b/examples/sketch/package.json
@@ -1,16 +1,16 @@
 {
   "name": "sketch",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "expo-pixi sketch example",
   "author": "support@expo.io",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "expo": "^25.0.0",
+    "expo": "^26.0.0",
     "expo-asset-utils": "^0.0.2",
-    "expo-pixi": "../../expo-pixi-v0.2.3.tgz",
-    "react": "16.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz"
+    "expo-pixi": "file:../../expo-pixi-v0.2.3.tgz",
+    "react": "16.3.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
