--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "dependencies": {
     "@expo/browser-polyfill": "^0.0.1-alpha.1",
-    "expo-asset": "1.1.1",
+    "expo-asset": "^2.0.0",
     "expo-asset-utils": "^0.0.5",
     "expo-file-system": "^1.0.0",
     "expo-gl": "^1.0.0",
