--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "expo-pixi",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Tools for using pixi in Expo",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "main": "lib/index.js",
   "homepage": "https://github.com/expo/expo-pixi#readme",
   "repository": {
@@ -37,21 +39,18 @@
     "lint:examples": "eslint examples/",
     "lint": "eslint lib/",
     "lint:fix": "eslint lib/ --fix",
-    "sync:basic":
-      "rsync -rv lib examples/basic/node_modules/expo-pixi/; rsync -rv package.json examples/basic/node_modules/expo-pixi/",
-    "sync:comprehensive":
-      "rsync -rv lib examples/comprehensive/node_modules/expo-pixi/; rsync -rv package.json examples/comprehensive/node_modules/expo-pixi/",
-    "sync:filter":
-      "rsync -rv lib examples/filter-image/node_modules/expo-pixi/; rsync -rv package.json examples/filter-image/node_modules/expo-pixi/",
-    "sync:signature":
-      "rsync -rv lib examples/signature/node_modules/expo-pixi/; rsync -rv package.json examples/signature/node_modules/expo-pixi/",
-    "sync:sketch":
-      "rsync -rv lib examples/sketch/node_modules/expo-pixi/; rsync -rv package.json examples/sketch/node_modules/expo-pixi/",
-    "sync":
-      "npm run sync:basic; npm run sync:comprehensive; npm run sync:filter; npm run sync:signature; npm run sync:sketch"
+    "sync:basic": "rsync -rv lib examples/basic/node_modules/expo-pixi/; rsync -rv package.json examples/basic/node_modules/expo-pixi/",
+    "sync:comprehensive": "rsync -rv lib examples/comprehensive/node_modules/expo-pixi/; rsync -rv package.json examples/comprehensive/node_modules/expo-pixi/",
+    "sync:filter": "rsync -rv lib examples/filter-image/node_modules/expo-pixi/; rsync -rv package.json examples/filter-image/node_modules/expo-pixi/",
+    "sync:signature": "rsync -rv lib examples/signature/node_modules/expo-pixi/; rsync -rv package.json examples/signature/node_modules/expo-pixi/",
+    "sync:sketch": "rsync -rv lib examples/sketch/node_modules/expo-pixi/; rsync -rv package.json examples/sketch/node_modules/expo-pixi/",
+    "sync": "npm run sync:basic; npm run sync:comprehensive; npm run sync:filter; npm run sync:signature; npm run sync:sketch"
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "dependencies": {
     "@expo/browser-polyfill": "^0.0.1-alpha.3",
