--- a/package.json
+++ b/package.json
@@ -53,9 +53,8 @@
     ]
   },
   "dependencies": {
-    "@expo/browser-polyfill": "^0.0.1-alpha.3",
+    "@expo/browser-polyfill": "^0.0.1-alpha.4",
     "fbemitter": "2.1.1",
-    "gl-matrix": "2.6.1",
     "path": "^0.12.7",
     "pixi-filters": "*",
     "pixi-spine": "^1.5.11",
@@ -63,11 +62,11 @@
     "url": "^0.11.0"
   },
   "peerDependencies": {
-    "expo-asset-utils": "^1.0.0",
-    "expo-gl": "~2.0.0"
+    "expo-asset-utils": "^1.1.0",
+    "expo-gl": "~4.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^4.0.0",
+    "babel-preset-expo": "^5.1.1",
     "eslint": "^5.1.0",
     "eslint-config-universe": "^1.0.6",
     "eslint-plugin-jest": "^21.2.0",
@@ -89,7 +88,7 @@
     "lint-staged": "^4.2.1",
     "prettier": "^1.12.1",
     "prettier-eslint": "^8.8.1",
-    "react": "16.2.0",
+    "react": "^16.2.0",
     "react-native": "^0.52.0",
     "react-native-vector-icons": "^4.2.0",
     "react-test-renderer": "^16.0.0",
