--- a/examples/basic/app.json
+++ b/examples/basic/app.json
@@ -7,12 +7,14 @@
     "version": "1.0.0",
     "primaryColor": "#E44262",
     "icon": "./assets/icon.png",
+    "platforms": ["web", "ios", "android"],
     "loading": {
       "icon": "./assets/icon.png",
       "hideExponentText": false
     },
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "platforms": ["android", "ios", "web"]
   }
 }
