--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "expo-pixi",
-  "version": "1.0.1",
+  "version": "1.1.0",
+  "sideEffects": true,
   "description": "Tools for using pixi in Expo",
   "license": "MIT",
   "readmeFilename": "README.md",
@@ -59,10 +60,10 @@
     "pixi-filters": "*",
     "pixi-spine": "^1.5.11",
     "pixi.js": "^4.7.0",
+    "expo-asset-utils": "^1.1.0",
     "url": "^0.11.0"
   },
   "peerDependencies": {
-    "expo-asset-utils": "^1.1.0",
     "expo-gl": "~4.0.0"
   },
   "devDependencies": {
