--- a/package.json
+++ b/package.json
@@ -54,13 +54,14 @@
     ]
   },
   "dependencies": {
-    "@expo/browser-polyfill": "^0.0.1-alpha.4",
+    "@expo/browser-polyfill": "0.0.1-alpha.3",
+    "expo-asset-utils": "1.1.0",
     "fbemitter": "2.1.1",
+    "gl-matrix": "^3.0.0",
     "path": "^0.12.7",
     "pixi-filters": "*",
     "pixi-spine": "^1.5.11",
     "pixi.js": "^4.7.0",
-    "expo-asset-utils": "^1.1.0",
     "url": "^0.11.0"
   },
   "peerDependencies": {
