--- a/examples/signature/app.json
+++ b/examples/signature/app.json
@@ -3,7 +3,7 @@
     "name": "signature",
     "description": "expo-pixi signature example",
     "slug": "expo-pixi-signature",
-    "sdkVersion": "32.0.0",
+    "sdkVersion": "36.0.0",
     "version": "1.0.0",
     "primaryColor": "#E44262",
     "privacy": "public",
@@ -14,6 +14,10 @@
     },
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "platforms": [
+      "android",
+      "ios"
+    ]
   }
 }
