--- a/examples/signature/package.json
+++ b/examples/signature/package.json
@@ -6,10 +6,13 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "expo": "^32.0.0",
+    "expo": "^36.0.0",
+    "expo-gl": "~8.0.0",
     "expo-pixi": "file:../../../expo-pixi/",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react": "16.9.0",
+    "react-dom": "^16.12.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-web": "^0.12.0-rc.1"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
