--- a/examples/sketch/package.json
+++ b/examples/sketch/package.json
@@ -6,11 +6,12 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "expo": "^26.0.0",
-    "expo-asset-utils": "^0.0.2",
-    "expo-pixi": "file:../../expo-pixi-v0.2.3.tgz",
-    "react": "16.3.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz"
+    "expo": "^36.0.0",
+    "expo-asset-utils": "^1.1.1",
+    "expo-gl": "^7.0.0",
+    "expo-pixi": "^1.2.0",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
