--- a/examples/signature/package.json
+++ b/examples/signature/package.json
@@ -8,13 +8,15 @@
   "dependencies": {
     "expo": "^36.0.0",
     "expo-gl": "~8.0.0",
-    "expo-pixi": "file:../../../expo-pixi/",
+    "expo-pixi": "file:./../../../expo-pixi",
     "react": "16.9.0",
     "react-dom": "^16.12.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-web": "^0.12.0-rc.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "babel-preset-expo": "^8.0.0",
     "eslint": "^4.9.0",
     "eslint-config-universe": "^1.0.6",
     "prettier": "^1.7.4"
