--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -8,16 +8,17 @@
   "dependencies": {
     "expo": "^33.0.0-alpha.web.1",
     "expo-asset-utils": "^1.1.0",
-    "expo-pixi": "../../expo-pixi-v1.1.0.tgz",
+    "expo-pixi": "file:./../../../expo-pixi",
     "react": "16.8.6",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-web": "^0.11.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1",
+    "@babel/core": "^7.7.7",
+    "babel-preset-expo": "^8.0.0",
     "eslint": "^5.16.0",
     "eslint-config-universe": "^1.0.7",
-    "prettier": "^1.17.0"
+    "prettier": "^1.19.1"
   }
 }
