--- a/examples/comprehensive/package.json
+++ b/examples/comprehensive/package.json
@@ -17,8 +17,10 @@
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
-    "eslint": "^5.12.0",
-    "eslint-config-universe": "^1.0.6",
-    "prettier": "^1.7.4"
+    "@babel/core": "^7.7.7",
+    "babel-preset-expo": "^8.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-universe": "^1.0.7",
+    "prettier": "^1.19.1"
   }
 }
