--- a/examples/sketch/package.json
+++ b/examples/sketch/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "expo": "^36.0.0",
+    "expo": "^35.0.0",
     "expo-asset-utils": "^1.1.1",
     "expo-gl": "^7.0.0",
     "expo-pixi": "^1.2.0",
@@ -14,8 +14,10 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz"
   },
   "devDependencies": {
-    "eslint": "^4.9.0",
-    "eslint-config-universe": "^1.0.6",
-    "prettier": "^1.7.4"
+    "@babel/core": "^7.7.7",
+    "babel-preset-expo": "^8.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-universe": "^1.0.7",
+    "prettier": "^1.19.1"
   }
 }
