--- a/example/package.json
+++ b/example/package.json
@@ -16,12 +16,9 @@
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
-    "expo-constants": "~13.1.1",
+    "expo-pixi": "../",
     "expo-gl": "~11.3.0",
-    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-system-ui": "~1.2.0",
-    "expo-web-browser": "~10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
